--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,8 +2,16 @@
 server {
 	listen 80 default;
 	root /home/nick/MyRep/etc/nginx.conf;
+	
+	location ^~ /hello/ {
+		proxy_pass http://0.0.0.0:8080;
+	}
+	location ~ 127.0.0.1:8080$ {
+		proxy_pass http://0.0.0.0:8080;
+	}
+	
 	location ^~ /uploads/ {
-		root /home/nick/MyRep/uploads;
+		root /home/nick/MyRep;
 	}
 	location ~ \.\w+$ {
 		root /home/nick/MyRep/public;
